# sample-databricks-alembic

./: .env_sample  .gitignore  README.md  pyproject.toml
databricks_alembic/: __main__.py
databricks_alembic/orm/: cli.py  db_setup.py
databricks_alembic/orm/alembic/: alembic.ini
databricks_alembic/orm/alembic/scripts/: env.py
databricks_alembic/orm/alembic/scripts/versions/: 2023_11_13_1916-b37e86d5acf7_first_database_revision.py  2024_01_19_1441-48ffcc7ba93e_revision_2.py  2024_01_19_1516-68c1ef671ef7_revision_3.py  2024_01_19_1533-d08b29de2ae7_revision_4.py
databricks_alembic/orm/models/: __init__.py  test_model.py
tests/orm/: conftest.py  test_db_setup.py
